# libswifft-rs

./: .gitignore  Cargo.toml  README.md
libswifft/: Cargo.toml
libswifft-rs/: Cargo.toml
libswifft-rs/src/: lib.rs
libswifft-sys/: Cargo.toml  build.rs
libswifft-sys/src/: CMakeLists.txt  arithmetic.rs  bindgen_ffi.rs  bindings.rs  buffer.rs  constant.rs  hash.rs  lib.rs
libswifft-sys/src/include/: common.h  swifft.h  swifft_api.inl  swifft_avx.h  swifft_avx2.h  swifft_avx512.h  swifft_common.h  swifft_fft_api.inl  swifft_hash_api.inl  swifft_iset.inl  swifft_object.h  swifft_object_iset.inl
libswifft-sys/src/reference/: constant.rs  hash.rs  polynomial.rs
libswifft-sys/src/src/: CMakeLists.txt  swifft.c  swifft.inl  swifft_avx.c  swifft_avx2.c  swifft_avx512.c  swifft_impl.inl  swifft_keygen.cpp  swifft_object.c  swifft_object.inl  swifft_ops.inl
libswifft/src/: arithmetic.rs  hash.rs  lib.rs  main.rs
libswifft/src/reference/: constant.rs  hash.rs  mod.rs  polynomial.rs
swifft-rs/: Cargo.toml
swifft-rs/src/: constant.rs  fft.rs  hash.rs  lib.rs  main.rs  multiplier.rs  polynomial.rs  z257.rs
