[package]
name = "swifft"
description = "An implementation of the SWIFFT hash function, written in Rust."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"


[dependencies]
num-traits = "0.2.18"
ff = { version = "0.13.0", features = ["derive"] }
halo2_proofs = "0.3.0"

# get rid of later
rand = "0.9.0-alpha.1"
