[package]
name = "swifft"
version = "0.1.0"
authors = ["Andrei Cravtov"]
description = "An implementation of the SWIFFT hash function, written in Rust."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]

[dependencies]
num-traits = "0.2.18"
ff = { version = "0.13.0", features = ["derive"] }
rayon = "1.10.0"
halo2_proofs = "0.3.0"
rand = "0.8.5"
